[gd_scene load_steps=12 format=3 uid="uid://ds34jynxuonpu"]

[ext_resource type="Script" path="res://Root.gd" id="1_13osd"]
[ext_resource type="Texture2D" uid="uid://dbis3tuj2nb0e" path="res://elizabeth/Gradient1.png" id="2_1qegq"]
[ext_resource type="Script" path="res://Backdrop/Backdrop.gd" id="3_nh0nh"]
[ext_resource type="PackedScene" uid="uid://cdvoaeft5jym6" path="res://bubble/bubble-node-2d.tscn" id="4_ed7tf"]
[ext_resource type="PackedScene" path="res://obstacles/obstacle_manager.tscn" id="5_ux4dr"]
[ext_resource type="FontFile" uid="uid://dhwnbdbovt8wu" path="res://font/04B_30__.TTF" id="6_l0lk0"]
[ext_resource type="AudioStream" uid="uid://ce5d4ttk65wyd" path="res://audio/mx_water_hell_loopable.ogg" id="7_phklw"]
[ext_resource type="Texture2D" uid="uid://wxup51e2bvpe" path="res://Backdrop/blur.png" id="8_p3t73"]
[ext_resource type="LabelSettings" path="res://label-settings.tres" id="9_avsaw"]
[ext_resource type="Script" path="res://end_menu.gd" id="10_p5oho"]

[sub_resource type="LabelSettings" id="LabelSettings_tut2x"]
font = ExtResource("6_l0lk0")
font_size = 64

[node name="Root2" type="Node2D" node_paths=PackedStringArray("backdrop", "bubble", "start_button", "score_label", "obstacle_manager", "main_menu_node")]
script = ExtResource("1_13osd")
accel = 10.0
backdrop = NodePath("Backdrop")
bubble = NodePath("Bubble")
start_button = NodePath("MainMenu/StartButton")
score_label = NodePath("Label")
obstacle_manager = NodePath("ObstacleManager")
main_menu_node = NodePath("MainMenu")

[node name="Backdrop" type="Sprite2D" parent="."]
position = Vector2(188, 171)
rotation = 3.14159
scale = Vector2(62.8422, -38.8728)
texture = ExtResource("2_1qegq")
region_enabled = true
region_rect = Rect2(4.718, 1000, 66.031, 101.462)
script = ExtResource("3_nh0nh")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Bubble" parent="." instance=ExtResource("4_ed7tf")]
position = Vector2(236, 728)

[node name="ObstacleManager" parent="." instance=ExtResource("5_ux4dr")]
position = Vector2(237, 161)

[node name="Label" type="Label" parent="."]
offset_left = 41.0
offset_top = 32.0
offset_right = 451.0
offset_bottom = 120.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_tut2x")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_phklw")
autoplay = true

[node name="MainMenu" type="Node2D" parent="."]

[node name="Blur" type="Sprite2D" parent="MainMenu"]
position = Vector2(298, 639)
scale = Vector2(1.70208, 1.82592)
texture = ExtResource("8_p3t73")

[node name="StartButton" type="TextureButton" parent="MainMenu"]
offset_left = 106.0
offset_top = 272.0
offset_right = 162.0
offset_bottom = 331.0
scale = Vector2(5.24448, 5.24448)
ignore_texture_size = true

[node name="Label2" type="Label" parent="MainMenu/StartButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.802
anchor_bottom = 0.77
offset_left = -0.57203
offset_top = 18.1143
offset_right = 255.516
offset_bottom = 37.6843
scale = Vector2(0.149168, 0.149168)
text = "START"
label_settings = ExtResource("9_avsaw")

[node name="EndMenu" type="Node2D" parent="."]
visible = false
position = Vector2(-786, -422)
script = ExtResource("10_p5oho")

[node name="Label" type="Label" parent="EndMenu"]
offset_right = 40.0
offset_bottom = 23.0
text = "You died!"
label_settings = ExtResource("9_avsaw")

[connection signal="popped" from="Bubble" to="." method="_on_bubble_popped"]
[connection signal="popped" from="Bubble" to="EndMenu" method="_on_bubble_popped"]
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_texture_button_pressed"]
